# Minim2

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: EVAL.md  GC.md  README.md
docs/agents/: chars.md  eval.md  parser.md  writer.md
docs/todos/: chars.md  eval.md  imports.md  parser.md  strings.md  writer.md
include/: gc.h  internal.h  minim.h  parser.h  types.h  writer.h
lib/: core.scm
src/: alloc.c  core_lib_data.h.in  equal.c  eval.c  gc.c  gc.h  main.c  parser.c  prims.c  read.c  symbol.c  system.c  write.c  writer.c
tests/: CMakeLists.txt  harness.h  test_alloc.c  test_eval.c  test_gc.c  test_import.c  test_parser.c  test_tags.c  test_writer.c
