function(minim_add_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE minim_rt)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    set_target_properties(${name} PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests")
    add_test(NAME ${name} COMMAND ${name})
endfunction()

minim_add_test(test_tags)
minim_add_test(test_alloc)
minim_add_test(test_gc)
minim_add_test(test_parser)
minim_add_test(test_writer)
minim_add_test(test_eval)
